# open-api-clients

./: .pre-commit-config.yaml  VERSION  flake.nix  generate.sh  pyproject.toml
config/: typescript-axios-v0.yaml  typescript-axios-v1.yaml  typescript-axios.yaml
scripts/: generate-inner.sh  generate.sh
src/typescript/mit-learn-api-axios/: package.json
src/typescript/mit-learn-api-axios/src/: index.ts
src/typescript/mit-learn-api-axios/src/v0/: index.ts
src/typescript/mit-learn-api-axios/src/v1/: base.ts  configuration.ts
src/typescript/mit-open-api-axios/: .yarnrc.yml  api.ts  base.ts  common.ts  package.json  tsconfig.json
src/typescript/mit-open-api-axios/src/: index.ts
src/typescript/mit-open-api-axios/src/v0/: api.ts  base.ts  common.ts  configuration.ts  index.ts
src/typescript/mit-open-api-axios/src/v1/: api.ts  base.ts  common.ts  configuration.ts  index.ts
