[tool.poetry]
name = "open-api-clients"
version = "0000.00.00"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bumpver = "^2023.1129"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0000.00.00"
version_pattern = "YYYY.MM.DD[.INC0]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
]

